--- a/ep1_Pytorch/chp2_Veriyi_hazırlama.ipynb
+++ b/ep1_Pytorch/chp2_Veriyi_hazırlama.ipynb
@@ -2258,6 +2258,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Testi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def dogruluk(loader,model):\n",
+    "    num_correct=0\n",
+    "    num_samples=0\n",
+    "    model.eval()#modeli test edicez\n",
+    "\n",
+    "    with torch.no_grad(): #burda modelimizi eğitmediğimiz için türevleri hesaplatmıcaz\n",
+    "        for x,y in loader:\n",
+    "            tahmin=model(x)\n",
+    "            _,pred=tahmin.max(1)\n",
+    "            num_correct+=(pred==y).sum() #tahmin değerimizi y' ye eşitse correcti 1 artıracak\n",
+    "            num_samples+=pred.size(0)\n",
+    "            \n",
+    "        print(f\"Got {num_correct}/{num_samples} with accuracy {float(num_correct)/float(num_samples)*100:.2f}\")\n",
+    "        model.train()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train dogruluk:\n",
+      "Got 163/200 with accuracy 81.50\n",
+      "tensor([True])\n",
+      "test dogruluk:\n",
+      "Got 64/79 with accuracy 81.01\n",
+      "tensor([True])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"train dogruluk:\")\n",
+    "dogruluk(train_loader,model)\n",
+    "print(\"test dogruluk:\")\n",
+    "dogruluk(test_loader,model)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
